@startuml

class LawArea {
    areaName: string
    areaDescription: string
    associatedLegalIssues: LegalIssue[]
}

class LegalIssue {
    issueName: string
    issueDescription: string
    associatedLegalArea: LawArea[]
}

class LegalService {
    serviceName: string
    serviceDescription: string
}

class LegalServiceBudget {
    budgetLowerBound: number
    budgetHigherBound: number
    legalServices: LegalService[]
    lawAreas: LawArea[]
    legalIssues: LegalIssue[]
    lawyer: Lawyer
}

class CaseInformationTemplate {
    requiredFields: map
    lawAreas: LawArea[]
    legalIssues: LegalIssue[]
    requiredDocumentTemplates: Document[]
    createdByLawyer: Lawyer
    estimatedBudget: LegalServiceBudget
}

class Document {
    documentName: string
    documentDescription: string
    documentURL: string
    isSensitive: boolean
    submittedUser: User
    associatedCase: Case
}

class Case {
    caseTitle: string
    caseDescription: String
    clientRemarks: string
    lawyerRemarks: string
    caseStatus: string
    caseFields: map
    client: Client
    lawyer: Lawyer
    meetings: Meeting[]
    associatedLawAreas: LawArea[]
    associatedLegalIssues: LegalIssue[]
    requiredLegalServices: LegalService[]
    documents: Document[]
    providedLegalAdvices: LegalAdvice[]
}

class LegalAdvice {
    adviceSummary: string
    associateCase: Case
    lawyer: Lawyer
}

class User {
    firstName: string
    lastName: string
    email: string
}

class Client {
    cases: Case[]
    arrangedMeetings: Meeting[]
}

class Lawyer {
    yearsOfExperience: number
    practiceAreas: LawArea[]
    experiencedIssues: LegalIssue[]
    caseTemplates: CaseInformationTemplate[]
    budgets: LegalServiceBudget[]
    cases: Case[]
    scheduledMeetings: Meeting[]
}

class Meeting {
    startDateTime: Date
    endDateTime: Date
    requestedCases: Case[]
    acceptedCase: Case
    lawyer: Lawyer
}


User <|- Client
User <|- Lawyer

LawArea }|--|{ LegalIssue
LawArea }o-- Lawyer

LegalIssue }o-- Lawyer

CaseInformationTemplate }|-- LegalIssue
CaseInformationTemplate }o-- LawArea
CaseInformationTemplate --|| Lawyer

LegalServiceBudget ||-- LegalService
LawArea }|-- LegalServiceBudget
LegalIssue }|-- LegalServiceBudget
LegalServiceBudget }o--|| Lawyer

Document --|| User
Case ||--o{ Document

LegalAdvice }o--|| Lawyer
LegalAdvice }o--|| Case

Case --|{ LawArea
Case --|{ LegalIssue
Case --|{ LegalService

@enduml